# lang-modes-check

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: mode_check.hpp  parsing_tree.hpp  printers.hpp  type_check.hpp  types.hpp  utils.hpp
src/: main.cpp  mode_check.cpp  parsing_tree.cpp  type_check.cpp  types.cpp
tests/: tests.cpp
